--- a/bower.json
+++ b/bower.json
@@ -2,5 +2,8 @@
   "name": "super-duper-chainsaw",
   "homepage": "https://github.com/djornada/super-duper-chainsaw",
   "main": "main.html",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "bootstrap": "^3.3.7"
+  }
 }
